--- a/HaCreator/GUI/Quest/QuestEditor.xaml
+++ b/HaCreator/GUI/Quest/QuestEditor.xaml
@@ -180,7 +180,7 @@
                     <Image Height="20"  Source="pack://application:,,,/HaCreator;component/Images/Quest/QuestIcon.8.0.png" Stretch="Uniform" HorizontalAlignment="Left"/>
                     <TextBlock Text=" reward amount:" />
                 </StackPanel>
-                <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
             </StackPanel>
         </DataTemplate>
         
@@ -191,7 +191,7 @@
                     <Image Height="20" Source="pack://application:,,,/HaCreator;component/Images/Quest/QuestIcon.7.0.png" Stretch="Uniform" HorizontalAlignment="Left"/>
                     <TextBlock Text=" reward amount:" Margin="4,0,0,0"/>
                 </StackPanel>
-                <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
             </StackPanel>
 
         </DataTemplate>
@@ -203,7 +203,7 @@
                     <Image Height="20" Source="pack://application:,,,/HaCreator;component/Images/Quest/QuestIcon.6.0.png" Stretch="Uniform" HorizontalAlignment="Left"/>
                     <TextBlock Text=" reward amount:" Margin="4,0,0,0"/>
                 </StackPanel>
-                <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
             </StackPanel>
         </DataTemplate>
 
@@ -214,7 +214,7 @@
                     <Image Height="20" Source="pack://application:,,,/HaCreator;component/Images/Quest/QuestIcon.11.0.png" Stretch="Uniform" HorizontalAlignment="Left"/>
                     <TextBlock Text="(sense) reward amount:" Margin="4,0,0,0"/>
                 </StackPanel>
-                <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="ActTraitWillTemplate">
@@ -223,7 +223,7 @@
                     <Image Height="20" Source="pack://application:,,,/HaCreator;component/Images/Quest/QuestIcon.11.0.png" Stretch="Uniform" HorizontalAlignment="Left"/>
                     <TextBlock Text="(will) reward amount:" Margin="4,0,0,0"/>
                 </StackPanel>
-                <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="ActTraitInsightTemplate">
@@ -232,7 +232,7 @@
                     <Image Height="20" Source="pack://application:,,,/HaCreator;component/Images/Quest/QuestIcon.11.0.png" Stretch="Uniform" HorizontalAlignment="Left"/>
                     <TextBlock Text="(insight) reward amount:" Margin="4,0,0,0"/>
                 </StackPanel>
-                <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="ActTraitCharismaTemplate">
@@ -241,7 +241,7 @@
                     <Image Height="20" Source="pack://application:,,,/HaCreator;component/Images/Quest/QuestIcon.11.0.png" Stretch="Uniform" HorizontalAlignment="Left"/>
                     <TextBlock Text="(charisma) reward amount:" Margin="4,0,0,0"/>
                 </StackPanel>
-                <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="ActTraitCharmTemplate">
@@ -250,7 +250,7 @@
                     <Image Height="20" Source="pack://application:,,,/HaCreator;component/Images/Quest/QuestIcon.11.0.png" Stretch="Uniform" HorizontalAlignment="Left"/>
                     <TextBlock Text="(charm) reward amount:" Margin="4,0,0,0"/>
                 </StackPanel>
-                <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="ActTraitCraftTemplate">
@@ -259,10 +259,20 @@
                     <Image Height="20" Source="pack://application:,,,/HaCreator;component/Images/Quest/QuestIcon.11.0.png" Stretch="Uniform" HorizontalAlignment="Left"/>
                     <TextBlock Text="(craft) reward amount:" Margin="4,0,0,0"/>
                 </StackPanel>
-                <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
             </StackPanel>
         </DataTemplate>
-        
+
+        <!-- Info -->
+        <DataTemplate x:Key="ActInfoExTemplate">
+            <StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="InfoEx string:" Margin="4,0,0,0"/>
+                </StackPanel>
+                <TextBox Text="{Binding Text, UpdateSourceTrigger=PropertyChanged}" Margin="0,2"/>
+            </StackPanel>
+        </DataTemplate>
+
         <!-- lvMin -->
         <DataTemplate x:Key="ActLvMinTemplate">
             <StackPanel>
@@ -365,7 +375,7 @@
                 </StackPanel>
                 <ComboBox x:Name="comboBox_petSkill" 
                           ItemsSource="{Binding Source={StaticResource PetSkillTypeEnum}}"  
-                           SelectedItem="{Binding Amount, Mode=TwoWay, Converter={StaticResource petSkillFlagConverter}}"
+                           SelectedItem="{Binding Amount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource petSkillFlagConverter}}"
                           SelectionChanged="comboBox_petSkill_SelectionChanged"
                                               >
                 </ComboBox>
@@ -386,7 +396,7 @@
                         <ColumnDefinition Width="120"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBox Text="{Binding Amount}" InputScope="Number" Grid.Row="0"/>
+                    <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Grid.Row="0"/>
 
                     <Button x:Name="botton_selectBuff" Content="Select Buff" Grid.Column="1" Style="{StaticResource ButtonStyle_Black}"  Height="20" Width="120"
                         VerticalAlignment="Bottom" HorizontalAlignment="Center"
@@ -429,7 +439,7 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Text="Message notice:" Grid.Column="0" Margin="4,0,0,0"/>
-                <TextBox Text="{Binding Text}" MaxLength="500" Grid.Column="1"/>
+                <TextBox Text="{Binding Text, UpdateSourceTrigger=PropertyChanged}" MaxLength="500" Grid.Column="1"/>
 
                 <TextBlock Text="Maps to show in:" Grid.Column="2" Margin="4,0,0,0"/>
                 <StackPanel Orientation="Vertical" Grid.Column="3">
@@ -466,7 +476,7 @@
                 
                 <StackPanel Grid.Column="0">
                     <TextBlock Text="Complete NPC ID:" />
-                    <TextBox Text="{Binding Amount}" InputScope="Number" Margin="0,2"/>
+                    <TextBox Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}" InputScope="Number" Margin="0,2"/>
                 </StackPanel>
 
                 <Button x:Name="button_selectNPC" Content="Select NPC" Grid.Column="1" Style="{StaticResource ButtonStyle_Black}" Height="20" VerticalAlignment="Bottom"
@@ -530,7 +540,7 @@
                                                />
                                         <ComboBox x:Name="comboBox_potentialGrade" 
                                               ItemsSource="{Binding Source={StaticResource PotentialTypeEnum}}"  
-                                              SelectedItem="{Binding PotentialGrade, Mode=TwoWay}"
+                                              SelectedItem="{Binding PotentialGrade, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                               >
                                         </ComboBox>
                                     </StackPanel>
@@ -601,6 +611,9 @@
                 </DataTrigger>
                 <DataTrigger Binding="{Binding ActType}" Value="{x:Static local:QuestEditorActType.SenseEXP}">
                     <Setter TargetName="RewardsContent" Property="ContentTemplate" Value="{StaticResource ActTraitSenseTemplate}"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ActType}" Value="{x:Static local:QuestEditorActType.Info}">
+                    <Setter TargetName="RewardsContent" Property="ContentTemplate" Value="{StaticResource ActInfoExTemplate}"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding ActType}" Value="{x:Static local:QuestEditorActType.LvMin}">
                     <Setter TargetName="RewardsContent" Property="ContentTemplate" Value="{StaticResource ActLvMinTemplate}"/>
